Hecho el listado vertical y horizontal (los xml) pero solo funciona el vertical porque es el unico sincronizado con los java.
He intentado hacer algo de fragment pero ha sido un fracaso asi que antes de volver a intentarlo hago el commit para tener un backup

Los cambios significativos estan en insertuser porque se completo el parseo de todos los datos y en listuser/usersadapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,14 @@
     <string name="insert_top_instruction">Rellena los campos dependiendo del tipo de usuarios que quieras introducir</string>
     <string name="list_no_users">No hay usuarios actualmente</string>
     <string name="principal_borrar_bbdd">Borrar Base de datos entera</string>
+    <string name="list_photo">Fotografía de la persona</string>
+    <string name="profile_pic">Profile pic</string>
+    <string name="example">Ejemplo</string>
+    <string name="localizaci_n">Localización:</string>
+    <string name="nombre">Nombre:</string>
+    <string name="g_nero">Género:</string>
+    <string name="registrado_en">Registro:</string>
+    <string name="borrar_usuario">Borrar usuario</string>
+    <string name="contrase_a">Contraseña:</string>
+    <string name="usuario">Usuario:</string>
 </resources>
