--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="borrar_usuario">Borrar usuario</string>
     <string name="contrase_a">Contraseña:</string>
     <string name="usuario">Usuario:</string>
+    <string name="nationality">Nationality:</string>
+    <string name="modificar_usuario">Modificar Usuario</string>
+    <string name="borrar_single">Borrar Usuario</string>
     <string-array name="nationalities">
         <item>Nacionalidad</item>
         <item>AU: Australia</item>
