Sin warnings casi, cambiado el logo de la app y quitado código que no se utilizaba

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,6 @@
     <string name="insertar">Insertar</string>
     <string name="listar">Listar</string>
     <string name="borrar_base_de_datos">Borrar base de datos</string>
+    <string name="ubi">Ubicacion</string>
 
 </resources>
