Añadido inicio de sesion con shared preferences y validacion de usuario por base de datos
añadida una nueva tabla de la base de datos llamada login, y sus operaciones en el dao y databaseinitializer

nuevo boton en pantalla principal para borrar las shared preferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,5 +65,10 @@
     <string name="listar">Listar</string>
     <string name="borrar_base_de_datos">Borrar base de datos</string>
     <string name="ubi">Ubicacion</string>
+    <string name="login_text">Introduce tus credenciales para acceder a la aplicación</string>
+    <string name="iniciar_sesi_n">Iniciar Sesión</string>
+    <string name="login">Inicio de Sesión</string>
+    <string name="borrar_shared_preferences">Borrar Shared Preferences</string>
+    <string name="borrar_shared_prefs">Borrar Shared Prefs</string>
 
 </resources>
